--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div><img src="rickroll-roll.gif" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works</p>
-<div><img src ="hello-world-feat.png" alt="Hello Git" style="width:100%;max-width:640px"></div>
+<div><img src ="hello world.png" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
 </html>
